added loader animation and meta title

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Uniqons</title>
+    <title>Uniqons | AI generated SVG icons</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="loader"></div>
     <div id="root"></div>
-
   </body>
 </html>
